# AtelierRTCam

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Convolution.cpp  Convolution.h  CornerDetector.cpp  CornerDetector.h  DerivativeMask.cpp  DerivativeMask.h  DerivativeMask_test.cpp  Makefile  MatOperator.cpp  MatOperator.h  MatOperator.hpp  PID.cpp  PID.hpp  README.md  Serial.cpp  Serial.hpp  cmake_install.cmake  colorTracking.cpp  harrisCornerDetection.cpp  harrisTracking.cpp  imgProcessing.cpp  imgProcessing.hpp  main.cpp  stabilization
arduino/script/: script.ino
serialUSBTest/: serial.cpp
